# stark

./: .gitignore  Cargo.toml  justfile
src/: controller.rs  doctor.rs  hospital.rs  lib.rs  main.rs  surgeon.rs
src/google/: authentication.rs  mod.rs  remote_config.rs
src/hospital/: doctor.rs  mod.rs  surgeon.rs
